# petals

./: .env.example  .gitignore  Dockerfile  Dockerfile.ARM  LICENSE  README.md  client.py  demo-requirements.txt  docker-compose.yml  get_peersl.sh  health.env  install_wsl_nvidia.py  load_balancer.py  pip.freeze  pip.freeze2  pip2.freeze  pyproject.toml  readthedocs.yml  remote.py  requirements-dev.txt  requirements-docs.txt  requirements-notebook.txt  requirements.txt  run.sh  run2.sh  run_guanaco.sh  run_server.py  server1.id  setup.cfg  setup.sh  test_guanaco.py  up.sh  your_code_here.py
.github/workflows/: check-style.yaml  codeball.yml  push-docker-image.yaml  push-docker-test2.yaml  run-tests-docker.yaml  run-tests.yaml
benchmarks/: benchmark_forward.py  benchmark_inference.py  benchmark_training.py
cli/: config.json  convert_model.py  demo_deploy_server.sh  deploy_server.sh  inference_one_block.py  quantize_cpu_naive.py  quantize_for_cpu.py  run_local_servers.sh  run_remote_servers.sh  run_server.py  run_servers_single_machine.sh  server_config_example.cfg  speed_test.py
docs/: conf.py  index.md
envs/: dht1.cillium.dev.compute.agentartificial.com.txt  dht1.cillium.mixed.txt  dht1.cillium.prod.compute.agentartificial.com.1.txt  dht1.cillium.prod.compute.agentartificial.com.txt
envs/cpu/is1/: env.txt
envs/gpu/: h100.txt
envs/gpu/h100/: dht1.cillium.dev.compute.agentartificial.com.txt  peers.txt
envs/gpu/is1/: env.txt
envs/tpu/v3-0/: env.txt
etc/: petals-inference.service
examples/: agent-examples.ipynb  personachat-example.ipynb  prompt-tuning-personachat.ipynb  prompt-tuning-sst2.ipynb  test_generation.ipynb  workbench_call_rpc_directly.ipynb
notebooks/: deep_prompt_tuning_cola.ipynb  deep_prompt_tuning_sst2.ipynb  prompt_tuning_example.ipynb  shallow_prompt_tuning_cola.ipynb  shallow_prompt_tuning_sst2.ipynb
petals/: __init__.py  constants.py  dht_utils.py
petals/bloom/: block.py
petals/client/: remote_forward_backward.py  remote_model.py  remote_sequential.py  sequence_manager.py
petals/server/: block_selection.py  handler.py  server.py  throughput.py
petals/src/: __init__.py
petals/src/bloom/: from_pretrained.py  ops.py
petals/src/client/: remote_model.py  remote_sequential.py  sequential_autograd.py
petals/src/server/: handler.py  throughput.py
petals/utils/: convert_8bit.py
src/: __init__.py  backend.py  block.py  data_structures.py  dht_utils.py  layer.py  model.py  ops.py  peft_utils.py
src/bloom/: __init__.py  block.py  from_pretrained.py  model.py  ops.py  ptune_v2_model.py
src/client/: TODO_design.py  __init__.py  async_forward_backward.py  dust_bank.py  dusty_block.py  inference_chain.py  inference_session.py  priority_block.py  remote_block.py  remote_block_inference.py  remote_forward_backward.py  remote_generation.py  remote_model.py  remote_sequence_info.py  remote_sequential.py  sequence_manager.py  sequential_autograd.py  spending_policy.py
src/client/routing/: __init__.py  routing_strategy.py  sequence_info.py  sequence_manager.py
src/node/: backend.py  cache.py
src/petals/: __init__.py  constants.py  data_structures.py  dht_utils.py
src/petals/api/: api.py
src/petals/api/openai/: api.py  protocol.py
src/petals/bloom/: __init__.py  block.py  config.py  from_pretrained.py  model.py  modeling_bloom.py  modeling_utils.py  ops.py  remote_model.py
src/petals/cli/: benchmark_forward.py  benchmark_inference.py  benchmark_training.py  convert_model.py  deploy_server.sh  inference_one_block.py  local_server_config_example.cfg  remote_server_config_example.cfg  run_dht.py  run_local_servers.sh  run_prod_server.sh  run_remote_servers.sh  run_server.py  speed_test.py
src/petals/client/: __init__.py  config.py  from_pretrained.py  inference_session.py  lm_head.py  modeling_utils.py  ptune.py  remote_forward_backward.py  remote_generation.py  remote_model.py  remote_sequential.py  sequence_manager.py  sequential_autograd.py
src/petals/client/routing/: __init__.py  sequence_info.py  sequence_manager.py  spending_policy.py
src/petals/llama/: __init__.py  block.py  config.py  modeling_utils.py
src/petals/models/: __init__.py
src/petals/models/bloom/: __init__.py  block.py  config.py  model.py
src/petals/models/falcon/: __init__.py  block.py  config.py  model.py
src/petals/models/llama/: __init__.py  block.py  config.py  llama_flash_attn_monkey_patch.py  model.py  slicing.py  (+1 more)
src/petals/server/: .handler.py.swp  backend.py  block_functions.py  block_methods.py  block_selection.py  block_utils.py  cache.py  from_pretrained.py  handler.py  memory_cache.py  model_specs.py  reachability.py  reachability2.py  server.py  task_pool.py  task_prioritizer.py  throughput.py
src/petals/src/: dht_utils.py
src/petals/triton/: __init__.py  attention.py  rmsnorm.py  rotary.py
src/petals/utils/: __init__.py  asyncio.py  auto_config.py  check_reachability.py  convert_8bit.py  convert_block.py  cuda_graphs.py  dht.py  disk_cache.py  generation_algorithms.py  generation_constraints.py  hf_auth.py  linear8bitlt_patch.py  logging.py  misc.py  mpfuture.py  packaging.py  peft.py  ping.py  random.py  version.py
src/server/: backend.py  block_selection.py  cache.py  handler.py  load_balancing.py  runtime.py  server.py  task_broker.py  task_pool.py  task_prioritizer.py  throughput.py
src/utils/: convert_8bit.py  generation_algorithms.py  generation_constraints.py  misc.py  tmp_convert_8bit.py
tests/: conftest.py  server2.id  test.id  test_api.py  test_aux_functions.py  test_block_exact_match.py  test_block_selection.py  test_block_selection_data  test_cache.py  test_chained_calls.py  test_chained_forward_backward.py  test_chained_inference.py  test_dtype.py  test_dust_payment.py  test_full_model.py  test_full_model_new_model.py  test_linear8bitlt.py  test_optimized_layers.py  test_peft.py  test_point_system.py  test_priority_pool.py  test_remote_sequential.py  test_sequence_manager.py  test_server_stats.py  test_speculative_generation.py  test_tensor_parallel.py  test_utils.py
tests/scripts/: remove_old_models.py
(+18 files in other folders)
